# python_bindings_from_lib

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: lib1.hpp
src/: main.cpp
src/lib1py/: __init__.py  _core.pyi
tests/: test_lib1py.py
